# herald

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-compose.yml
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  forward.rs  main.rs  tunnel.rs
crates/apalis/: Cargo.toml
crates/apalis/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  main.rs  state.rs
crates/api/src/middleware/: auth.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
crates/api/src/routes/: admin.rs  channels.rs  health.rs  mod.rs  publisher.rs  signals.rs  subscriptions.rs  webhooks.rs
crates/api/src/tunnel/: mod.rs  protocol.rs  registry.rs  server.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  config.rs  lib.rs  tunnel.rs  tunnel_tests.rs  types.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs
crates/db/src/queries/: api_keys.rs  channels.rs  dead_letter_queue.rs  deliveries.rs  mod.rs  publishers.rs  signals.rs  subscribers.rs  subscriptions.rs  webhooks.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
crates/worker/src/jobs/: delivery.rs  mod.rs  stats.rs
docs/: api.md  openclaw.md
migrations/: 20260208_001_initial.sql
