[package]
name = "herald-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
clap = { workspace = true, features = ["derive"] }
core = { path = "../core" }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
