[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
core = { path = "../core" }
db = { path = "../db" }
sqlx = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
apalis = { workspace = true }
serde = { workspace = true }
nanoid = { workspace = true }
dotenvy = "0.15"
